Enabled dynamic account-profile-environment setting

--- a/TealiumSample/Assets/Plugins/Android/AndroidManifest.xml
+++ b/TealiumSample/Assets/Plugins/Android/AndroidManifest.xml
@@ -32,5 +32,8 @@
             <meta-data android:name="unityplayer.UnityActivity" android:value="true" />
             <meta-data android:name="unityplayer.ForwardNativeEventsToDalvik" android:value="false" />
         </activity>
+		<meta-data android:name="com.tealium.library.ACCOUNT" android:value="tealiummobile" />
+		<meta-data android:name="com.tealium.library.PROFILE" android:value="android" />
+		<meta-data android:name="com.tealium.library.ENVIRONMENT" android:value="dev" />
     </application>
 </manifest>
