--- a/TealiumSample/Assets/Plugins/Android/AndroidManifest.xml
+++ b/TealiumSample/Assets/Plugins/Android/AndroidManifest.xml
@@ -35,5 +35,7 @@
 		<meta-data android:name="com.tealium.library.ACCOUNT" android:value="tealiummobile" />
 		<meta-data android:name="com.tealium.library.PROFILE" android:value="demo" />
 		<meta-data android:name="com.tealium.library.ENVIRONMENT" android:value="dev" />
+		<!--TODO: remove for release builds-->
+		<meta-data android:name="com.tealium.library.DEBUG" android:value="true" />
     </application>
 </manifest>
