--- a/Source/Android/TealiumUnity/tealium-unity/build.gradle
+++ b/Source/Android/TealiumUnity/tealium-unity/build.gradle
@@ -5,6 +5,9 @@ android {
     buildToolsVersion "28.0.3"
 
     defaultConfig {
+        versionCode 3
+        versionName "1.2"
+
         minSdkVersion 19
         targetSdkVersion 28
     }
