Update build.yml to install unity

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on: [pull_request]
 
 jobs:
   build:
-    - name: Create Unity Package
+    name: Create Unity Package
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2 
