--- a/Source/Android/TealiumUnity/gradle/wrapper/gradle-wrapper.properties
+++ b/Source/Android/TealiumUnity/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
-#Tue Apr 20 19:54:19 PDT 2021
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.2.1-bin.zip
+networkTimeout=10000
+validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
