--- a/Source/Android/TealiumUnity/unity/build.gradle
+++ b/Source/Android/TealiumUnity/unity/build.gradle
@@ -6,8 +6,8 @@ plugins {
 version = "2.1.0"
 
 android {
-    compileSdkVersion 34
-    buildToolsVersion "30.0.3"
+    namespace "com.tealium"
+    compileSdk 34
 
     defaultConfig {
         minSdkVersion 21
@@ -36,11 +36,14 @@ android {
     packagingOptions {
         pickFirst 'META-INF/kotlinx_coroutines_core.version'
     }
+    buildFeatures {
+        buildConfig true
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compileOnly files('/Applications/Unity/Hub/Editor/2020.3.7f1/PlaybackEngines/AndroidPlayer/Variations/mono/Release/Classes/classes.jar')
+    compileOnly files('/Applications/Unity/Hub/Editor/2022.3.21f1/PlaybackEngines/AndroidPlayer/Variations/mono/Release/Classes/classes.jar')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
